--- a/FallenClient/Conponents/SkillCard.razor
+++ b/FallenClient/Conponents/SkillCard.razor
@@ -55,8 +55,8 @@
         {
             <span class="skill-modifier">@ModifierDisplay</span>
             <div class="skill-card-controls">
-                <button class="btn btn-sm btn-primary" @onclick="StartEdit">Edit</button>
-                <button class="btn btn-sm btn-danger" @onclick="RemoveSkill">Remove</button>
+                <button class="btn-edit" @onclick="StartEdit"></button>
+                <button class="btn-remove" @onclick="RemoveSkill"></button>
             </div>
         }
     </div>
