--- a/FallenClient/Layout/MainLayout.razor
+++ b/FallenClient/Layout/MainLayout.razor
@@ -1,12 +1,15 @@
 ﻿@inherits LayoutComponentBase
-<div class="page">
-    <div class="sidebar">
+<div class="page d-flex">
+    <div class="navbar sidebar">
         <NavMenu />
     </div>
 
-    <main>
+    <main class="flex-grow-1">
         <article class="content px-4">
             @Body
         </article>
     </main>
 </div>
+
+@code {
+}
