--- a/FallenClient/wwwroot/css/components/skill-card.css
+++ b/FallenClient/wwwroot/css/components/skill-card.css
@@ -3,7 +3,6 @@
     border: 1px solid #444;
     color: var(--text-color);
     margin-bottom: 0.5rem;
-    padding: 0.5rem;
     border-radius: var(--border-radius);
     width: 100%;
     box-shadow: 0 0.125rem 0.25rem rgba(0, 0, 0, 0.1); /* 2px 4px equivalent */
@@ -13,7 +12,6 @@
 }
 
 .skill-card .card-body {
-    padding: 0.5rem;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -23,6 +21,7 @@
 .skill-name {
     font-size: 1rem;
     font-weight: bold;
+    margin-left: 1rem;
     color: var(--text-color);
     flex-grow: 1; /* Ensures name takes up space */
 }
