--- a/FallenClient/Pages/Sandbox.razor
+++ b/FallenClient/Pages/Sandbox.razor
@@ -1,5 +1,5 @@
 ﻿@page "/sandbox"
-@using FallenClient.Conponents
+@using FallenClient.Components
 @using FallenClient.Library.Models
 @using FallenClient.Library.Values
 
